[package]
name = "stm_freqctr"
version = "0.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "GPL-2.0+"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.6.6"
cortex-m-semihosting = { version = "=0.3.2" }
panic-semihosting = "0.5.1"
embedded-hal = "0.2.3"
stm32f3 = { version = "0.6.0", features = ["rt", "stm32f303"] }
stm32f3xx-hal = { version = "0.1.4", features = ["rt", "stm32f303"] }
heapless = { version = "0.4.4", features = ["const-fn", "smaller-atomics"] }
