[package]
name = "stm_freqctr"
version = "0.0.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "GPL-2.0+"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.6"
cortex-m-semihosting = { version = "0.3.2" }
heapless = "0.7"
panic-semihosting = "0.5.1"
embedded-hal = "0.2.3"
stm32f3xx-hal = { version = "0.6.1", features = ["rt", "stm32f303xc"] }
